ItemBuilder, GUIBuilder and doc comments have been added to all functions thus far.